[gd_scene load_steps=9 format=2]

[ext_resource path="res://Entities/RollerHazard/Roller-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Entities/Digit/Digit.png" type="Texture" id=2]
[ext_resource path="res://Entities/RollerHazard/RollerHazard.gd" type="Script" id=3]
[ext_resource path="res://Entities/RollerHazard/Roller-back.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Run"
length = 0.75
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "SquishDigit"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("DigitSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DigitSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 3.6, 3.8, 5.3, 5.4, 5.5, 5.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 97, 98, 98, 83, 83, 82 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DigitSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -53, 5 ), Vector2( 55, 5 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 5.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_spawn_pancake"
} ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 16.0
height = 48.0

[node name="RollerHazard" type="Node2D"]
script = ExtResource( 3 )

[node name="RollerHazardBody2D" type="KinematicBody2D" parent="."]

[node name="background" type="Sprite" parent="RollerHazardBody2D"]
position = Vector2( 25, 0 )
texture = ExtResource( 4 )

[node name="DigitSprite" type="Sprite" parent="RollerHazardBody2D"]
position = Vector2( 20.8, 5 )
texture = ExtResource( 2 )
vframes = 12
hframes = 9
frame = 98

[node name="Sprite1" type="Sprite" parent="RollerHazardBody2D"]
position = Vector2( -25, 0 )
texture = ExtResource( 1 )
hframes = 3
frame = 2

[node name="Sprite2" type="Sprite" parent="RollerHazardBody2D"]
texture = ExtResource( 1 )
hframes = 3
frame = 1

[node name="Sprite3" type="Sprite" parent="RollerHazardBody2D"]
position = Vector2( 25, 0 )
texture = ExtResource( 1 )
hframes = 3

[node name="SquishZone" type="Area2D" parent="RollerHazardBody2D"]

[node name="SquishShape" type="CollisionShape2D" parent="RollerHazardBody2D/SquishZone"]
visible = false
position = Vector2( -45.0845, 12.7224 )
shape = SubResource( 1 )

[node name="RollingAnimation" type="AnimationPlayer" parent="RollerHazardBody2D"]
anims/Run = SubResource( 2 )

[node name="DigitSquishPlayer" type="AnimationPlayer" parent="RollerHazardBody2D"]
anims/SquishDigit = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RollerHazardBody2D"]
visible = false
position = Vector2( -0.630669, 5.04538 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="SheetSpawnPoint" type="Node2D" parent="RollerHazardBody2D"]
position = Vector2( 53, 14 )
